--- a/task.html
+++ b/task.html
@@ -37,6 +37,7 @@
           <div class="navbar__main--logo__name">Skyz<span>CRM</span></div>
         </div>
       </div>
+
       <div class="navbar__main">
         <div class="navbar__main--search">
           <div class="field-container">
@@ -133,7 +134,7 @@
                   <div>
                     <span>כרטיס</span>
                   </div>
-                  <div class="dynamic-btns-group">
+                  <!-- <div class="dynamic-btns-group">
                     <span
                       class="material-symbols-outlined btn-default close-expand-new"
                     >
@@ -150,7 +151,7 @@
                     >
                       arrows_more_down
                     </span>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="group-fields">
                   <span class="edit-content">
@@ -203,35 +204,18 @@
                       >
                     </span>
                   </span>
-                  <span
+                  <!-- <span
                     class="material-symbols-outlined btn-default show-on-hover-btn"
                     id="show-more-fields"
                   >
                     expand_content
-                  </span>
+                  </span> -->
                 </div>
               </div>
               <div class="group blue">
                 <div class="group-name">
                   <div>
                     <span>שלח</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
                   </div>
                 </div>
                 <div class="group-fields">
@@ -251,35 +235,12 @@
                       >
                     </span>
                   </span>
-
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                  >
-                    expand_content
-                  </span>
                 </div>
               </div>
               <div class="group purple">
                 <div class="group-name">
                   <div>
                     <span>תכנון לעתיד</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
                   </div>
                 </div>
                 <div class="group-fields">
@@ -346,12 +307,6 @@
                         דיווח שעות עצמי</span
                       >
                     </span>
-                  </span>
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                    id="show-more-fields"
-                  >
-                    expand_content
                   </span>
                 </div>
               </div>
@@ -360,23 +315,6 @@
                   <div>
                     <span>תיעוד</span>
                   </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
-                  </div>
                 </div>
 
                 <div class="group-fields">
@@ -444,35 +382,12 @@
                       >
                     </span>
                   </span>
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                    id="show-more-fields"
-                  >
-                    expand_content
-                  </span>
                 </div>
               </div>
               <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>קדם מכירות</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
                   </div>
                 </div>
 
@@ -513,36 +428,12 @@
                       >
                     </span>
                   </span>
-
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                    id="show-more-fields"
-                  >
-                    expand_content
-                  </span>
                 </div>
               </div>
               <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>חשבונית/קבלה</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
                   </div>
                 </div>
 
@@ -583,35 +474,12 @@
                       >
                     </span>
                   </span>
-
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                  >
-                    expand_content
-                  </span>
                 </div>
               </div>
               <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>זיכויים</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
                   </div>
                 </div>
 
@@ -640,34 +508,12 @@
                       >
                     </span>
                   </span>
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                  >
-                    expand_content
-                  </span>
                 </div>
               </div>
               <div class="group green">
                 <div class="group-name">
                   <div>
                     <span>הוראות</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
                   </div>
                 </div>
 
@@ -706,12 +552,6 @@
                       >
                     </span>
                   </span>
-
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                  >
-                    expand_content
-                  </span>
                 </div>
               </div>
 
@@ -719,24 +559,6 @@
                 <div class="group-name">
                   <div>
                     <span>פעולה</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                      data-target="box1"
-                    >
-                      arrows_more_down
-                    </span>
                   </div>
                 </div>
 
@@ -785,34 +607,12 @@
                       >
                     </span>
                   </span>
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                  >
-                    expand_content
-                  </span>
                 </div>
               </div>
               <div class="group">
                 <div class="group-name">
                   <div>
                     <span>לוגיסטיקה</span>
-                  </div>
-                  <div class="dynamic-btns-group">
-                    <span
-                      class="material-symbols-outlined btn-default close-expand-new"
-                    >
-                      close
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default expend-btn"
-                    >
-                      arrows_more_up
-                    </span>
-                    <span
-                      class="material-symbols-outlined btn-default minimize"
-                    >
-                      arrows_more_down
-                    </span>
                   </div>
                 </div>
 
@@ -848,12 +648,6 @@
                         יציאה מהמלאי</span
                       >
                     </span>
-                  </span>
-
-                  <span
-                    class="material-symbols-outlined btn-default show-on-hover-btn"
-                  >
-                    expand_content
                   </span>
                 </div>
               </div>
