--- a/person.html
+++ b/person.html
@@ -61,7 +61,7 @@
               move_to_inbox
             </span>
             <span
-              class="material-symbols-outlined create-icon"
+              class="material-symbols-outlined create-icon clicked"
               data-color="red"
             >
               task_alt
