--- a/task.html
+++ b/task.html
@@ -244,6 +244,16 @@
                   </div>
                 </div>
                 <div class="group-fields">
+                  <span class="edit-content medium">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          devices_wearables
+                        </span>
+                        דיווח שעות עצמי</span
+                      >
+                    </span>
+                  </span>
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
@@ -298,13 +308,11 @@
                       >
                     </span>
                   </span>
-                  <span class="edit-content medium">
+                  <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined">
-                          devices_wearables
-                        </span>
-                        דיווח שעות עצמי</span
+                        <span class="material-symbols-outlined"> article </span>
+                        קובץ</span
                       >
                     </span>
                   </span>
@@ -318,6 +326,16 @@
                 </div>
 
                 <div class="group-fields">
+                  <span class="edit-content medium">
+                    <span class="edit-field">
+                      <span class="value-text">
+                        <span class="material-symbols-outlined">
+                          devices_wearables
+                        </span>
+                        דיווח שעות עצמי</span
+                      >
+                    </span>
+                  </span>
                   <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
@@ -372,13 +390,11 @@
                       >
                     </span>
                   </span>
-                  <span class="edit-content medium">
+                  <span class="edit-content">
                     <span class="edit-field">
                       <span class="value-text">
-                        <span class="material-symbols-outlined">
-                          devices_wearables
-                        </span>
-                        דיווח שעות עצמי</span
+                        <span class="material-symbols-outlined"> article </span>
+                        קובץ</span
                       >
                     </span>
                   </span>
