--- a/task.html
+++ b/task.html
@@ -571,7 +571,7 @@
                 </div>
               </div>
 
-              <div class="group">
+              <!-- <div class="group">
                 <div class="group-name">
                   <div>
                     <span>פעולה</span>
@@ -624,7 +624,7 @@
                     </span>
                   </span>
                 </div>
-              </div>
+              </div> -->
               <div class="group">
                 <div class="group-name">
                   <div>
