--- a/person.html
+++ b/person.html
@@ -297,12 +297,44 @@
             </div>
           </div>
         </div>
+        <div class="navbar__create">
+          <div class="create-title">
+            <!-- <span class="material-symbols-outlined"> add </span> -->
+            <div>צור</div>
+          </div>
+          <!-- <div class="icons-container">
+            <span
+              class="material-symbols-outlined create-icon"
+              data-color="blue"
+            >
+              person
+            </span>
+            <span
+              class="material-symbols-outlined create-icon"
+              data-color="green"
+            >
+              attach_money
+            </span>
+            <span
+              class="material-symbols-outlined create-icon"
+              data-color="purple"
+            >
+              move_to_inbox
+            </span>
+            <span
+              class="material-symbols-outlined create-icon clicked"
+              data-color="red"
+            >
+              task_alt
+            </span>
+          </div> -->
+        </div>
       </section>
 
       <!-- -*-*-*-*-*-*-*-*--*-*-*- Card Section - Person --*-*-*-*-*-*-*-*-*-*-* -->
       <section class="card-container" id="personCard">
         <div class="card">
-          <div class="group-container-create">
+          <div class="group-container-create active" data-color="purple">
             <div class="group purple">
               <div class="group-name">
                 <div>
@@ -310,6 +342,16 @@
                 </div>
               </div>
               <div class="group-fields">
+                <span class="edit-content medium">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined">
+                        devices_wearables
+                      </span>
+                      דיווח שעות עצמי</span
+                    >
+                  </span>
+                </span>
                 <span class="edit-content">
                   <span class="edit-field">
                     <span class="value-text">
@@ -362,6 +404,24 @@
                     >
                   </span>
                 </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> article </span>
+                      קובץ</span
+                    >
+                  </span>
+                </span>
+              </div>
+            </div>
+            <div class="group purple">
+              <div class="group-name">
+                <div>
+                  <span>תיעוד</span>
+                </div>
+              </div>
+
+              <div class="group-fields">
                 <span class="edit-content medium">
                   <span class="edit-field">
                     <span class="value-text">
@@ -372,9 +432,362 @@
                     >
                   </span>
                 </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined">
+                        cardio_load
+                      </span>
+                      קריאה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> task_alt </span>
+                      משימה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> notes </span>
+                      הערה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> call </span>
+                      שיחה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> today </span>
+                      פגישה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content medium">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined">
+                        credit_card_clock
+                      </span>
+                      דיווח שעות</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> article </span>
+                      קובץ</span
+                    >
+                  </span>
+                </span>
               </div>
             </div>
           </div>
+          <div class="group-container-create active" data-color="green">
+            <div class="group green">
+              <div class="group-name">
+                <div>
+                  <span>קדם מכירות</span>
+                </div>
+              </div>
+
+              <div class="group-fields">
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> paid </span>
+                      הזדמנות</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> local_atm </span>
+                      הצעה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> shop </span>
+                      הזמנה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> campaign </span>
+                      קמפיין</span
+                    >
+                  </span>
+                </span>
+              </div>
+            </div>
+            <div class="group green">
+              <div class="group-name">
+                <div>
+                  <span>חשבונית/קבלה</span>
+                </div>
+              </div>
+
+              <div class="group-fields">
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> shop </span>
+                      עסקה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> paid </span>
+                      מס</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> local_atm </span>
+                      מס קבלה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> local_atm </span>
+                      קבלה</span
+                    >
+                  </span>
+                </span>
+              </div>
+            </div>
+            <div class="group green">
+              <div class="group-name">
+                <div>
+                  <span>זיכויים</span>
+                </div>
+              </div>
+
+              <div class="group-fields">
+                <span class="edit-content medium">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> shop </span>
+                      חשבונית מס זיכוי</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content medium">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> shop </span>
+                      חשבונית עסקה זיכוי</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> paid </span>
+                      קבלה זיכוי</span
+                    >
+                  </span>
+                </span>
+              </div>
+            </div>
+            <div class="group green">
+              <div class="group-name">
+                <div>
+                  <span>הוראות</span>
+                </div>
+              </div>
+
+              <div class="group-fields">
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> shop </span>
+                      הוראת זיכוי</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> shop </span>
+                      הוראת חיוב</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> paid </span>
+                      הפקדת בנק
+                    </span>
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> local_atm </span>
+                      קבלה</span
+                    >
+                  </span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="group-container-create active" data-color="blue">
+            <div class="group blue">
+              <div class="group-name">
+                <div>
+                  <span>כרטיס</span>
+                </div>
+              </div>
+              <div class="group-fields">
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> person </span>
+                      ליד</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> person </span>
+                      איש</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> domain </span>
+                      ארגון</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content not-visible">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> note </span>
+                      הערה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content not-visible">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> mail </span>
+                      מייל</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content not-visible">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined">
+                        attach_file
+                      </span>
+                      קובץ</span
+                    >
+                  </span>
+                </span>
+              </div>
+            </div>
+            <div class="group blue">
+              <div class="group-name">
+                <div>
+                  <span>שלח</span>
+                </div>
+              </div>
+              <div class="group-fields">
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> mail </span>
+                      מייל</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> sms </span>
+                      SMS</span
+                    >
+                  </span>
+                </span>
+              </div>
+            </div>
+          </div>
+          <div class="group-container-create active" data-color="red">
+            <div class="group">
+              <div class="group-name">
+                <div>
+                  <span>לוגיסטיקה</span>
+                </div>
+              </div>
+
+              <div class="group-fields">
+                <span class="edit-content medium">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> paid </span>
+                      תעודת משלוח</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content medium">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> paid </span>
+                      תעודת החזרה</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content medium">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> shop </span>
+                      כניסה למלאי</span
+                    >
+                  </span>
+                </span>
+                <span class="edit-content medium">
+                  <span class="edit-field">
+                    <span class="value-text">
+                      <span class="material-symbols-outlined"> shop </span>
+                      יציאה מהמלאי</span
+                    >
+                  </span>
+                </span>
+              </div>
+            </div>
+          </div>
+
           <div class="top-container">
             <div class="card__navigate">
               <h4>פעולות</h4>
