--- a/person.html
+++ b/person.html
@@ -39,7 +39,7 @@
         <div class="navbar__create">
           <div class="create-title">
             <!-- <span class="material-symbols-outlined"> add </span> -->
-            <div>צור</div>
+            <div>צור:</div>
           </div>
           <div class="icons-container">
             <span
@@ -64,7 +64,7 @@
               class="material-symbols-outlined create-icon"
               data-color="red"
             >
-              task_alt
+              electric_rickshaw
             </span>
           </div>
         </div>
