--- a/person.html
+++ b/person.html
@@ -66,6 +66,15 @@
             >
               electric_rickshaw
             </span>
+            <span class="material-symbols-outlined create-icon">
+              task_alt
+            </span>
+            <span class="material-symbols-outlined create-icon">
+              task_alt
+            </span>
+            <span class="material-symbols-outlined create-icon">
+              task_alt
+            </span>
           </div>
         </div>
       </div>
