--- a/person.html
+++ b/person.html
@@ -39,7 +39,6 @@
           </div>
           <div class="navbar__create">
             <div class="create-title">
-              <!-- <span class="material-symbols-outlined"> add </span> -->
               <div>צור:</div>
             </div>
             <div class="icons-container-create">
@@ -759,10 +758,8 @@
           </div>
         </div>
         <div class="navbar__create">
-          <div class="create-title">
-            <!-- <span class="material-symbols-outlined"> add </span> -->
-            <div>צור</div>
-          </div>
+          <div class="create-title"></div>
+          <div class="group-container-create"></div>
           <!-- <div class="icons-container">
             <span
               class="material-symbols-outlined create-icon"
