--- a/person.html
+++ b/person.html
@@ -45,34 +45,36 @@
               <span
                 class="material-symbols-outlined create-icon"
                 data-color="blue"
+                title="כרטיס"
               >
                 person
               </span>
               <span
                 class="material-symbols-outlined create-icon"
                 data-color="green"
+                title="מכירות"
               >
                 attach_money
               </span>
               <span
                 class="material-symbols-outlined create-icon"
                 data-color="purple"
+                title="תיעוד"
               >
                 move_to_inbox
               </span>
               <span
                 class="material-symbols-outlined create-icon"
                 data-color="red"
+                title="לוגיסטיקה"
               >
                 electric_rickshaw
               </span>
-              <span class="material-symbols-outlined create-icon">
-                task_alt
-              </span>
-              <span class="material-symbols-outlined create-icon">
-                task_alt
-              </span>
-              <span class="material-symbols-outlined create-icon">
+              <span
+                class="material-symbols-outlined create-icon"
+                data-color="yellow"
+                title="תכנון לעתיד"
+              >
                 task_alt
               </span>
             </div>
@@ -131,83 +133,6 @@
 
       <div class="navbar-bottom">
         <div class="group-container-create active" data-color="purple">
-          <div class="group purple">
-            <div class="group-name">
-              <div>
-                <span>תכנון לעתיד</span>
-              </div>
-            </div>
-            <div class="group-fields">
-              <span class="edit-content medium">
-                <span class="edit-field">
-                  <span class="value-text">
-                    <span class="material-symbols-outlined">
-                      devices_wearables
-                    </span>
-                    דיווח שעות עצמי</span
-                  >
-                </span>
-              </span>
-              <span class="edit-content">
-                <span class="edit-field">
-                  <span class="value-text">
-                    <span class="material-symbols-outlined"> cardio_load </span>
-                    קריאה</span
-                  >
-                </span>
-              </span>
-              <span class="edit-content">
-                <span class="edit-field">
-                  <span class="value-text">
-                    <span class="material-symbols-outlined"> task_alt </span>
-                    משימה</span
-                  >
-                </span>
-              </span>
-              <span class="edit-content">
-                <span class="edit-field">
-                  <span class="value-text">
-                    <span class="material-symbols-outlined"> notes </span>
-                    הערה</span
-                  >
-                </span>
-              </span>
-              <span class="edit-content">
-                <span class="edit-field">
-                  <span class="value-text">
-                    <span class="material-symbols-outlined"> call </span>
-                    שיחה</span
-                  >
-                </span>
-              </span>
-              <span class="edit-content">
-                <span class="edit-field">
-                  <span class="value-text">
-                    <span class="material-symbols-outlined"> today </span>
-                    פגישה</span
-                  >
-                </span>
-              </span>
-              <span class="edit-content medium">
-                <span class="edit-field">
-                  <span class="value-text">
-                    <span class="material-symbols-outlined">
-                      credit_card_clock
-                    </span>
-                    דיווח שעות</span
-                  >
-                </span>
-              </span>
-              <span class="edit-content">
-                <span class="edit-field">
-                  <span class="value-text">
-                    <span class="material-symbols-outlined"> article </span>
-                    קובץ</span
-                  >
-                </span>
-              </span>
-            </div>
-          </div>
           <div class="group purple">
             <div class="group-name">
               <div>
@@ -571,6 +496,85 @@
                   <span class="value-text">
                     <span class="material-symbols-outlined"> shop </span>
                     יציאה מהמלאי</span
+                  >
+                </span>
+              </span>
+            </div>
+          </div>
+        </div>
+        <div class="group-container-create active" data-color="yellow">
+          <div class="group purple">
+            <div class="group-name">
+              <div>
+                <span>תכנון לעתיד</span>
+              </div>
+            </div>
+            <div class="group-fields">
+              <span class="edit-content medium">
+                <span class="edit-field">
+                  <span class="value-text">
+                    <span class="material-symbols-outlined">
+                      devices_wearables
+                    </span>
+                    דיווח שעות עצמי</span
+                  >
+                </span>
+              </span>
+              <span class="edit-content">
+                <span class="edit-field">
+                  <span class="value-text">
+                    <span class="material-symbols-outlined"> cardio_load </span>
+                    קריאה</span
+                  >
+                </span>
+              </span>
+              <span class="edit-content">
+                <span class="edit-field">
+                  <span class="value-text">
+                    <span class="material-symbols-outlined"> task_alt </span>
+                    משימה</span
+                  >
+                </span>
+              </span>
+              <span class="edit-content">
+                <span class="edit-field">
+                  <span class="value-text">
+                    <span class="material-symbols-outlined"> notes </span>
+                    הערה</span
+                  >
+                </span>
+              </span>
+              <span class="edit-content">
+                <span class="edit-field">
+                  <span class="value-text">
+                    <span class="material-symbols-outlined"> call </span>
+                    שיחה</span
+                  >
+                </span>
+              </span>
+              <span class="edit-content">
+                <span class="edit-field">
+                  <span class="value-text">
+                    <span class="material-symbols-outlined"> today </span>
+                    פגישה</span
+                  >
+                </span>
+              </span>
+              <span class="edit-content medium">
+                <span class="edit-field">
+                  <span class="value-text">
+                    <span class="material-symbols-outlined">
+                      credit_card_clock
+                    </span>
+                    דיווח שעות</span
+                  >
+                </span>
+              </span>
+              <span class="edit-content">
+                <span class="edit-field">
+                  <span class="value-text">
+                    <span class="material-symbols-outlined"> article </span>
+                    קובץ</span
                   >
                 </span>
               </span>
