--- a/person.html
+++ b/person.html
@@ -761,35 +761,8 @@
             </div>
           </div>
         </div>
-        <div class="navbar__create">
-          <div class="create-title"></div>
-          <div class="group-container-create"></div>
-          <!-- <div class="icons-container">
-            <span
-              class="material-symbols-outlined create-icon"
-              data-color="blue"
-            >
-              person
-            </span>
-            <span
-              class="material-symbols-outlined create-icon"
-              data-color="green"
-            >
-              attach_money
-            </span>
-            <span
-              class="material-symbols-outlined create-icon"
-              data-color="purple"
-            >
-              move_to_inbox
-            </span>
-            <span
-              class="material-symbols-outlined create-icon clicked"
-              data-color="red"
-            >
-              task_alt
-            </span>
-          </div> -->
+        <div class="navbar__create-append">
+          <div class="group-container-create-append"></div>
         </div>
       </section>
 
