--- a/person.html
+++ b/person.html
@@ -43,35 +43,35 @@
             </div>
             <div class="icons-container-create">
               <span
-                class="material-symbols-outlined create-icon"
+                class="material-symbols-outlined create-icon btn-default"
                 data-color="blue"
                 title="כרטיס"
               >
                 person
               </span>
               <span
-                class="material-symbols-outlined create-icon"
+                class="material-symbols-outlined create-icon btn-default"
                 data-color="green"
                 title="מכירות"
               >
                 attach_money
               </span>
               <span
-                class="material-symbols-outlined create-icon"
+                class="material-symbols-outlined create-icon btn-default"
                 data-color="purple"
                 title="תיעוד"
               >
                 move_to_inbox
               </span>
               <span
-                class="material-symbols-outlined create-icon"
+                class="material-symbols-outlined create-icon btn-default"
                 data-color="red"
                 title="לוגיסטיקה"
               >
                 electric_rickshaw
               </span>
               <span
-                class="material-symbols-outlined create-icon"
+                class="material-symbols-outlined create-icon btn-default"
                 data-color="yellow"
                 title="תכנון לעתיד"
               >
