--- a/person.html
+++ b/person.html
@@ -53,7 +53,7 @@
                     <span class="material-symbols-outlined"> search </span>
                   </div> -->
 
-                  <div class="label-container">
+                  <div class="label-container active">
                     <label
                       class="label-text"
                       style="display: flex; gap: 0.6rem"
@@ -78,7 +78,7 @@
             <div class="create-title">
               <div>צור</div>
             </div>
-            <!-- <div class="icons-container-create">
+            <div class="icons-container-create active">
               <span
                 class="material-symbols-outlined create-icon btn-default"
                 data-color="blue"
@@ -114,8 +114,8 @@
               >
                 task_alt
               </span>
-            </div> -->
-            <div class="round-btn round-btn-primary green">
+            </div>
+            <div class="round-btn round-btn-primary green" id="create-btn">
               <span class="material-symbols-outlined"> add_circle </span>
             </div>
           </div>
@@ -586,493 +586,6 @@
                   >
                 </span>
               </span>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="navbar-bottom full-create">
-        <div class="full-create--box">
-          <div class="create-sub-title">
-            <span class="material-symbols-outlined"> person </span>
-            <span>כרטיס</span>
-          </div>
-          <div class="group-container-create">
-            <div class="group blue">
-              <div class="group-name">
-                <div>
-                  <span>כרטיס</span>
-                </div>
-              </div>
-              <div class="group-fields">
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> person </span>
-                      ליד</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> person </span>
-                      איש</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> domain </span>
-                      ארגון</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content not-visible">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> note </span>
-                      הערה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content not-visible">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> mail </span>
-                      מייל</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content not-visible">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined">
-                        attach_file
-                      </span>
-                      קובץ</span
-                    >
-                  </span>
-                </span>
-              </div>
-            </div>
-            <div class="group blue">
-              <div class="group-name">
-                <div>
-                  <span>שלח</span>
-                </div>
-              </div>
-              <div class="group-fields">
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> mail </span>
-                      מייל</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> sms </span>
-                      SMS</span
-                    >
-                  </span>
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="full-create--box">
-          <div class="create-sub-title">
-            <span class="material-symbols-outlined"> attach_money </span>
-            <span>מכירות</span>
-          </div>
-          <div class="group-container-create">
-            <div class="group green">
-              <div class="group-name">
-                <div>
-                  <span>קדם מכירות</span>
-                </div>
-              </div>
-
-              <div class="group-fields">
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> paid </span>
-                      הזדמנות</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> local_atm </span>
-                      הצעה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> shop </span>
-                      הזמנה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> campaign </span>
-                      קמפיין</span
-                    >
-                  </span>
-                </span>
-              </div>
-            </div>
-            <div class="group green">
-              <div class="group-name">
-                <div>
-                  <span>חשבונית/קבלה</span>
-                </div>
-              </div>
-
-              <div class="group-fields">
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> shop </span>
-                      עסקה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> paid </span>
-                      מס</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> local_atm </span>
-                      מס קבלה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> local_atm </span>
-                      קבלה</span
-                    >
-                  </span>
-                </span>
-              </div>
-            </div>
-            <div class="group green">
-              <div class="group-name">
-                <div>
-                  <span>זיכויים</span>
-                </div>
-              </div>
-
-              <div class="group-fields">
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> shop </span>
-                      חשבונית מס זיכוי</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> shop </span>
-                      חשבונית עסקה זיכוי</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> paid </span>
-                      קבלה זיכוי</span
-                    >
-                  </span>
-                </span>
-              </div>
-            </div>
-            <div class="group green">
-              <div class="group-name">
-                <div>
-                  <span>הוראות</span>
-                </div>
-              </div>
-
-              <div class="group-fields">
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> shop </span>
-                      הוראת זיכוי</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> shop </span>
-                      הוראת חיוב</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> paid </span>
-                      הפקדת בנק
-                    </span>
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> local_atm </span>
-                      קבלה</span
-                    >
-                  </span>
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="full-create--box">
-          <div class="create-sub-title">
-            <span class="material-symbols-outlined"> move_to_inbox </span>
-            <span>תיעוד</span>
-          </div>
-          <div class="group-container-create">
-            <div class="group purple">
-              <!-- <div class="group-name">
-                <div>
-                  <span>תיעוד</span>
-                </div>
-              </div> -->
-
-              <div class="group-fields">
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined">
-                        devices_wearables
-                      </span>
-                      דיווח שעות עצמי</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined">
-                        cardio_load
-                      </span>
-                      קריאה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> task_alt </span>
-                      משימה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> notes </span>
-                      הערה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> call </span>
-                      שיחה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> today </span>
-                      פגישה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined">
-                        credit_card_clock
-                      </span>
-                      דיווח שעות</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> article </span>
-                      קובץ</span
-                    >
-                  </span>
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="full-create--box">
-          <div class="create-sub-title">
-            <span class="material-symbols-outlined"> task_alt </span>
-            <span>תכנון לעתיד</span>
-          </div>
-          <div class="group-container-create">
-            <div class="group purple">
-              <!-- <div class="group-name">
-                <div>
-                  <span>תכנון לעתיד</span>
-                </div>
-              </div> -->
-              <div class="group-fields">
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined">
-                        devices_wearables
-                      </span>
-                      דיווח שעות עצמי</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined">
-                        cardio_load
-                      </span>
-                      קריאה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> task_alt </span>
-                      משימה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> notes </span>
-                      הערה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> call </span>
-                      שיחה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> today </span>
-                      פגישה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined">
-                        credit_card_clock
-                      </span>
-                      דיווח שעות</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> article </span>
-                      קובץ</span
-                    >
-                  </span>
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="full-create--box">
-          <div class="create-sub-title">
-            <span class="material-symbols-outlined"> electric_rickshaw </span>
-            <span>לוגיסטיקה</span>
-          </div>
-          <div class="group-container-create">
-            <div class="group">
-              <!-- <div class="group-name">
-                <div>
-                  <span>לוגיסטיקה</span>
-                </div>
-              </div> -->
-
-              <div class="group-fields">
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> paid </span>
-                      תעודת משלוח</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> paid </span>
-                      תעודת החזרה</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> shop </span>
-                      כניסה למלאי</span
-                    >
-                  </span>
-                </span>
-                <span class="edit-content medium">
-                  <span class="edit-field">
-                    <span class="value-text">
-                      <span class="material-symbols-outlined"> shop </span>
-                      יציאה מהמלאי</span
-                    >
-                  </span>
-                </span>
-              </div>
             </div>
           </div>
         </div>
